<resources>
    <string name="app_name">Suhu Antena SBPJP</string>
    <string name="splash_screen">Aplikasi Monitoring</string>

    <string name="info_app">Info Aplikasi</string>
    <string name="lapan_parepare">LAPAN PAREPARE</string>
    <string name="sbpjp">Stasiun Bumi Penginderaan Jauh Parepare</string>
    <string name="raden_mas_dev">© V1.1 - Des 19 - M Sukron Kurniawan - UNM</string>
    <string name="radenmas_dev">© Sukron Dev</string>
    <string name="unm">Universitas Negeri Makassar</string>
    <string name="version_app">Versi 1.1</string>

    <string name="copyright">Copyright</string>
    <string name="copyrightYear">Des 2019</string>
    <string name="copyrightName">M SUKRON KURNIAWAN</string>
    <string name="copyrightInst">Universitas Negeri Makassar</string>

    <string name="email">Email</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>

    <string name="orbital">Orbital</string>
    <string name="viasat">Viasat</string>
    <string name="zodiac">Zodiac</string>
    <string name="server">Server</string>

    <string name="antena_orbital">Antena Orbital</string>
    <string name="antena_viasat">Antena Viasat</string>
    <string name="antena_zodiac">Antena Zodiac</string>
    <string name="ruang_server">Ruang Server</string>

    <string name="temperature">Suhu</string>
    <string name="humidity">Kelembaban</string>
    <string name="degree_c">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="percent">%</string>

    <string name="status">Kondisi</string>
    <string name="normal">Normal</string>
    <string name="hot">Panas</string>

    <string name="max">Maks</string>
    <string name="min">Min</string>
    <string name="temp_min">20°C</string>
    <string name="temp_max">35°C</string>

    <string name="strip">-</string>
    <string name="cold">Dingin</string>
    <string name="suhu_antena">Suhu Antena</string>
    <string name="nol">00</string>
    <string name="jam_nol">00:00</string>
    <string name="tgl_default">01 Jan 2020</string>
    <string name="set_no_data_text">Grafik tidak tersedia. Periksa koneksi internet Anda</string>

    <string name="live">15 Menit</string>
    <string name="jam">1 Jam</string>
    <string name="day">1 Hari</string>


    <string name="add_widget">Add widget</string>
    <string name="change_theme">Ubah Tema</string>
    <string name="title_activity_settings">Pengaturan</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="option_on">On</string>

</resources>
