<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="70dp"
    android:layout_height="35dp"
    android:background="@drawable/bg_marker_view"
    tools:ignore="Overdraw"
    android:orientation="vertical"
    android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvSuhu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nol"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree_c"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jam_nol"
            android:textSize="12sp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>

</LinearLayout>
