<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg_gradient"
    android:paddingBottom="30dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:fontFamily="@font/crete_round"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version_app"
        android:gravity="center"
        android:textColor="@color/whiteSmoke"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/amaranth"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:src="@drawable/logo_lapan"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginBottom="@dimen/margin_12dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lapan_parepare"
        android:gravity="center"
        android:textColor="@color/whiteSmoke"
        android:textSize="16sp"
        android:layout_marginBottom="@dimen/margin_15dp"
        android:fontFamily="@font/amaranth"/>
    <TextView
        android:id="@+id/radenmas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/raden_mas_dev"
        android:gravity="center"
        android:textColor="@color/semiWhite"
        android:textSize="12sp"
        android:fontFamily="@font/amaranth"/>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="2dp"-->
<!--        android:background="@drawable/main_screen_horizontal_separator"-->
<!--        android:layout_marginLeft="120dp"-->
<!--        android:layout_marginRight="120dp"/>-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="30dp"-->
<!--        android:layout_marginBottom="30dp"-->
<!--        android:layout_marginLeft="50dp"-->
<!--        android:layout_marginRight="50dp"-->
<!--        android:orientation="vertical">-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/copyright"-->
<!--            android:textColor="@color/whiteSmoke"-->
<!--            android:textSize="14sp"-->
<!--            android:fontFamily="@font/amaranth"/>-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/version_app"-->
<!--            android:textColor="@color/semiWhite"-->
<!--            android:textSize="14sp"-->
<!--            android:fontFamily="@font/amaranth"/>-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/copyrightYear"-->
<!--            android:textColor="@color/semiWhite"-->
<!--            android:textSize="14sp"-->
<!--            android:fontFamily="@font/amaranth"/>-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/copyrightName"-->
<!--            android:textColor="@color/semiWhite"-->
<!--            android:textSize="14sp"-->
<!--            android:fontFamily="@font/amaranth"/>-->
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/copyrightInst"-->
<!--            android:textColor="@color/semiWhite"-->
<!--            android:textSize="14sp"-->
<!--            android:fontFamily="@font/amaranth" />-->
<!--    </LinearLayout>-->
</LinearLayout>